tests/fixtures/errors/postprocess/variants/stdout-typo/postprocess.js
module.exports = require("../../hack")(async () => ({
  exitCode: 0,
  stdOut: "text",
}));
